Font-family fixed on safari mobile

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -32,7 +32,7 @@
 }
 
 .main-title {
-    font-family: "Raleway", Arial, Helvetica, sans-serif;
+    font-family: 'Raleway', Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 36px;
     font-weight: 500;
@@ -43,7 +43,7 @@
     margin-top: 0px;
 }
 .main-description {
-    font-family: "Roboto", Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 20px;
     font-weight: 400;
@@ -54,7 +54,7 @@
     margin-top: 0px;    
 }
 .section-title {
-    font-family: "Raleway", Arial, Helvetica, sans-serif;
+    font-family: 'Raleway', Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 30px;
     font-weight: 500;
@@ -67,7 +67,7 @@
   }
   
   .section-card-title {
-    font-family: "Raleway", Arial, Helvetica, sans-serif;
+    font-family: 'Raleway', Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 20px;
     font-weight: 400;
@@ -80,7 +80,7 @@
   }
   
   .section-description {
-    font-family: "Roboto", Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
     text-align: justify;
     font-size: 14px;
     font-weight: 300;
